--- a/indexPS.html
+++ b/indexPS.html
@@ -6,14 +6,14 @@
         <title>PlayStation</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="/src/img/logo.png">
-        <script type="text/javascript" src="/js/script1.js"></script>
+        <link rel="shortcut icon" href="src/img/logo.png">
+        <script type="text/javascript" src="js/script1.js"></script>
     </head>
     <body>
         <div id="sony-bar" class="sony-bar">
             <a href="https:/sony.com/">
                 <span id="sony-logo">
-                    <img id="sony" src="/src/img/sony.png"></img>
+                    <img id="sony" src="src/img/sony.png"></img>
                 </span>
             </a>
         </div>
